--- a/src/template.html
+++ b/src/template.html
@@ -7,7 +7,7 @@
     <link
       rel="shortcut icon"
       type="image/png"
-      href="assets/apple-touch-icon.png"
+      href="assets/favicon.png"
     />
 
     <!-- Put here your site title -->
@@ -155,7 +155,7 @@
                 <h3 class="project-wrapper__text-title">Crwn</h3>
                 <div>
                   <p class="mb-4">
-                    This is a React application. The application simulates a e-commerce website. Users can process payment and store items into their account. For authentication, users can login with email or google account.
+                    This is a React application. The application simulates a e-commerce website. Users can process payment and store items into their account. For authentication, users can login with email or google account.ç
                   </p>
                 </div>
                 <a
