--- a/src/template.html
+++ b/src/template.html
@@ -284,8 +284,58 @@
         </div>
       </div>
     </section>
-
     <!-- /END Projects Section -->
+     <!-- Freelance -->
+     <section id="projects">
+      <div class="container">
+        <div class="project-wrapper">
+          <h2 class="section-title dark-blue-text">Freelance jobs</h2>
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">portfolio</h3>
+                <p class="mb-4">
+                 The client wanted a portfolio to show case his work. The requirements were minimalist design with nice scroll experience for mobile, and ways for companies to contact him. 
+                 </p>
+                <div>
+                  <p class="mb-4">
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://dakarakoso.github.io/MatheusKodada/"
+                >
+                  See Live
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/Dakarakoso/MatheusKodada/"
+                >
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a rel="noreferrer" href="https://dakarakoso.github.io/MatheusKodada/" target="_blank">
+                  <div data-tilt class="thumbnail rounded js-tilt">
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/matheus.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+              </div> 
+        </div>
+        </div>
+      </section>
     <!-- Small projects -->
     <section id="projects">
       <div class="container">
@@ -616,11 +666,9 @@
     </div>
   </div>
     <!-- end -->
-
-
-
-
     </section>
+
+   
 
     <!-- **** Contact Section **** -->
     <section id="contact">
@@ -664,14 +712,6 @@
         </div>
 
         <hr />
-
-        <!-- If you give me some credit, will be huge for me :)
-        <p class="footer__text">
-          © 2021 - Template developed by
-          <a rel="noreferrer" href="https://github.com/cobidev" target="_blank"
-            >Jacobo Martínez</a
-          >
-        </p> -->
       </div>
     </footer>
     <!-- /END Footer Section -->
