added the new live version for meals to go

--- a/src/template.html
+++ b/src/template.html
@@ -252,7 +252,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="https://expo.dev/accounts/dakarakoso/projects/MealsToGo"
+                  href="https://appetize.io/app/wh4wywmkr5xmu6drc4qq89qmtc?device=pixel4xl&scale=75&orientation=portrait&osVersion=10.0"
                 >
                   See Live
                 </a>
