--- a/src/template.html
+++ b/src/template.html
@@ -295,7 +295,7 @@
               <div class="project-wrapper__text">
                 <h3 class="project-wrapper__text-title">portfolio</h3>
                 <p class="mb-4">
-                 The client wanted a portfolio to show case his work. The requirements were minimalist design with nice scroll experience for mobile, and ways for companies to contact him. 
+                 The client wanted a portfolio to show case his work. The requirements were minimalist design with nice scroll experience for mobile. 
                  </p>
                 <div>
                   <p class="mb-4">
