--- a/src/template.html
+++ b/src/template.html
@@ -305,7 +305,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="https://dakarakoso.github.io/MatheusKodada/"
+                  href="https://dakarakoso.github.io/MatheusKodaka/"
                 >
                   See Live
                 </a>
