--- a/src/template.html
+++ b/src/template.html
@@ -11,11 +11,11 @@
     />
 
     <!-- Put here your site title -->
-    <title>Willian Negishi | Developer</title>
+    <title>Willian Maruyama | Developer</title>
 
     <meta name="keywords" content="[dakarakoso], [willian], skill" />
     <!-- Improve your SEO by adding a small descrption of you -->
-    <meta name="description" content="[Willian Negishi] | Developer" />
+    <meta name="description" content="[Willian Maruyama] | Developer" />
 
     <!-- Required librarys -->
     <link
@@ -155,7 +155,7 @@
                 <h3 class="project-wrapper__text-title">Crwn</h3>
                 <div>
                   <p class="mb-4">
-                    This is a React application. The application simulates a e-commerce website. Users can process payment and store items into their account. For authentication, users can login with email or google account.ç
+                    This is a React application. The application simulates an e-commerce website. Users can process payment and store items into their account. For authentication, users can login with email or google account.ç
                   </p>
                 </div>
                 <a
@@ -697,7 +697,7 @@
         <div class="social-links">
           <a
             rel="noreferrer"
-            href="https://www.linkedin.com/in/willian-negishi-2829a4172/"
+            href="https://www.linkedin.com/in/willian-Maruyama-2829a4172/"
             target="_blank"
           >
             <i class="fa fa-linkedin fa-inverse"></i>
